# pretty-print-languagetool

./: LICENSE  README.md  main.py  pyproject.toml  test.py
src/pp_languagetool/: cli.py  helpers.py
tests/: test_pp_languagetool.py
